--- a/style.css
+++ b/style.css
@@ -1,19 +1,13 @@
-:root {
-    --grid-cols: 1;
-    --grid-rows: 1;
-  }
-
   #container {
     margin: auto;
-    width: 30%;
-    padding: 10px;
+    width: 576px;
+    height: 576px;
     display: grid;
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
   }
   
   .grid-item {
-    padding: 1em;
+    grid-row: auto;
+    grid-column: auto;
     border: 1px solid gray;
     
   }
